Changes to code, collapsed JSON, fixed images more, changed colors

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #004eeb;
-  --ifm-color-primary-dark: #0046d3;
-  --ifm-color-primary-darker: #0042c8;
-  --ifm-color-primary-darkest: #0037a5;
-  --ifm-color-primary-light: #0357ff;
-  --ifm-color-primary-lighter: #0f5fff;
-  --ifm-color-primary-lightest: #3276ff;
+  --ifm-color-primary: #0c38f6;
+  --ifm-color-primary-dark: #0831e0;
+  --ifm-color-primary-darker: #082ed3;
+  --ifm-color-primary-darkest: #0626ae;
+  --ifm-color-primary-light: #254cf7;
+  --ifm-color-primary-lighter: #3157f7;
+  --ifm-color-primary-lightest: #5775f9;
   --ifm-code-font-size: 95%;
 }
 
